--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
     "graphql": "^16.11.0",
+    "graphql-subscriptions": "^3.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
