--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,14 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.3",
     "@prisma/client": "^6.11.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
     "graphql": "^16.11.0",
     "graphql-subscriptions": "^3.0.0",
+    "graphql-upload": "^13.0.0",
+    "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
@@ -47,6 +49,7 @@
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
