fix(type): fixed some type errors

--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,7 @@
     "bcrypt": "^6.0.0",
     "graphql": "^16.11.0",
     "graphql-subscriptions": "^3.0.0",
-    "graphql-upload": "^13.0.0",
+    "graphql-upload": "13",
     "multer": "^2.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -49,7 +49,6 @@
     "@swc/core": "^1.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "@types/graphql-upload": "^17.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
