--- a/mobile/package.json
+++ b/mobile/package.json
@@ -21,6 +21,7 @@
     "graphql": "^16.11.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "^3.18.0",
